# customer-skill-manager-app

./: .gitattributes  .gitignore  Cargo.toml  PLAN.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/csm-core/: Cargo.toml
crates/csm-core/src/: backoff.rs  cleanup.rs  config.rs  desktop.rs  diff.rs  error.rs  hash.rs  http.rs  lib.rs  manifest.rs  paths.rs  state.rs  sync.rs
crates/csm-core/tests/: live_api.rs
docs/: RELEASE.md
scripts/: build-local.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_paths.rs  commands.rs  desktop_control.rs  lib.rs  logging.rs  main.rs  scheduler.rs  state.rs  status.rs  tray.rs  updater.rs
ui/: index.html
