[package]
name = "csm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core logic for the Customer Skill Manager: config, state, manifest diffing and sync planning."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, optional = true }

[features]
# Enables the reqwest-based HTTP skill source. Off by default so the pure
# logic tests build fast and offline; the GUI app turns it on.
net = ["dep:reqwest"]

[dev-dependencies]
tempfile = { workspace = true }
